--- a/retype.yml
+++ b/retype.yml
@@ -1,8 +1,8 @@
 input: .
 output: .retype
-url: # Add your website address here
+url: https://adnankhan27.github.io/retype-test/
 branding:
-  title: Project Name
+  title: Ady's-Title
   label: Docs
 links:
 - text: Getting Started
