--- a/retype.yml
+++ b/retype.yml
@@ -5,7 +5,7 @@ branding:
   title: Ady's-Title
   label: Docs
 links:
-- text: Getting Started
-  link: https://retype.com/guides/getting-started/
+- text: Guides
+  link: /Guides/
 footer:
   copyright: "&copy; Copyright {{ year }}. All rights reserved."
