changes the url again

--- a/retype.yml
+++ b/retype.yml
@@ -1,6 +1,6 @@
 input: .
 output: .retype
-url: https://adnankhan27.github.io/retype-test/
+url: adnankhan27.github.io/retype-test/
 branding:
   title: Ady's-Title
   label: Docs
