--- a/.github/retype-action.yml
+++ b/.github/retype-action.yml
@@ -14,8 +14,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: retypeapp/action-build@latest
+      - uses: retypeapp/action-build@v2
 
-      - uses: retypeapp/action-github-pages@latest
+      - uses: retypeapp/action-github-pages@v2
         with:
+          branch: retype
           update-branch: true
